# ai-infra

./: .gitignore  README.md  pyproject.toml
docs/: Agent与Workflow区别-四层Agent协同编排引擎.md  index.md
examples/: artifact_input.json  artifact_workflow.yaml  governance_workflow.yaml  hello_workflow.yaml  mcp_reserved_input.json  mcp_reserved_workflow.yaml  mcp_runtime_workflow.yaml  missing_env_workflow.yaml  output_contract_failure_workflow.yaml  output_contract_workflow.yaml  react_input.json  react_openai_budget_workflow.yaml  react_openai_compatible_input.json  react_openai_compatible_workflow.yaml  react_openai_dry_run_workflow.yaml  react_openai_live_disabled_workflow.yaml  react_openai_missing_key_workflow.yaml  react_openai_timeout_workflow.yaml  react_workflow.yaml  redaction_input.json  redaction_workflow.yaml  resume_input.json  resume_workflow.yaml  retry_exhausted_workflow.yaml  retry_workflow.yaml  tool_failure_workflow.yaml  tool_workflow.yaml  validation_assertion_failure_workflow.yaml  validation_assertion_workflow.yaml
scripts/: verify_cli_artifacts.py  verify_cli_bundle_integrity.py  verify_cli_governance.py  verify_cli_maintenance.py  verify_cli_mcp_runtime.py  verify_cli_output_contract.py  verify_cli_production_demo.py  verify_cli_provenance.py  verify_cli_react_node.py  verify_cli_react_openai_provider.py  verify_cli_react_provider_governance.py  verify_cli_redaction_governance.py  verify_cli_resume.py  verify_cli_retry_policy.py  verify_cli_run_store_reliability.py  verify_cli_tool_boundary.py  verify_cli_validation_assertions.py  (+3 more)
tests/: test_cli.py  (+14 more)
(+74 files in other folders)
