[project]
name = "ai-infra"
version = "0.1.0"
description = "Local Agentic Infra orchestration kernel"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ai-infra = "ai_infra.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_infra"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
